--- a/ghost/assets/stylesheets/style.scss
+++ b/ghost/assets/stylesheets/style.scss
@@ -1,9 +1,11 @@
+
 /*!
-	Theme Name: Style Guide Ghost
-	Theme URI: https://github.com/guilhermessantos
-	Author: Guilherme Souza
-	Description:
-	Version: 1.0.0
+Theme Name: GB Theme
+Author: Apiki WordPress
+Author URI: https://apiki.com/
+Description: Theme developed for CLIENT NAME.
+Version: 0.1.0
+Text Domain: gb-theme
 */
 
 // :: SASS TO JS
