Adjust folder hierarchy, created color component

--- a/storybook/assets/stylesheets/_gb-doc-component.scss
+++ b/storybook/assets/stylesheets/_gb-doc-component.scss
@@ -44,8 +44,8 @@ $code-bg: #f7f7f9;
 	pre {
 		background: $code-bg;
 		border: 1px solid #ccc;
-		// border-radius: 3px;
 		font-size: 14px;
+		margin-top: 10px;
 		padding: 24px;
 
 		code {
