--- a/storybook/assets/stylesheets/storybook.scss
+++ b/storybook/assets/stylesheets/storybook.scss
@@ -1,1 +1,5 @@
-@import 'gb-doc-component';
+@import 'doc-component';
+@import 'message';
+@import 'colors-book';
+@import 'fonts-book';
+@import 'icons-book';
