--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,5 +1,5 @@
 /*!
-	Theme Name: GB Theme
+	Theme Name: GB Themes That
 	Theme URI: https://apiki.com
 	Author: Apiki
 	Description: Organize your assets
@@ -7,21 +7,20 @@
 */
 
 // :: SASS TO JS
-// -- Exports variables to js
-// -- Don't remove
-@import "sass_to_js/sass-to-js";
+// -- Export variables to be used in js
+@import 'sass-to-js/sass-to-js';
 
 // :: BASE
 // -- All standard configuration of the project
 // -- ex ( fonts, reset, variables )
-@import 'base/**/*.scss';
+@import 'base/**/*';
 
 // :: COMPONENTS
 // -- Groups of elements with the intention of building standards in components
 // -- ex ( form, card, block news )
-@import '../../components/**/*.scss';
+// @import '../../components/**/*.scss';
 
 // :: LAYOUTS
 // -- Structure and skeleton
 // -- ex ( grid, header, sidebar )
-@import 'layouts/*.scss';
+// @import 'layouts/*.scss';
