--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -15,6 +15,11 @@
 // -- ex ( fonts, reset, variables )
 @import 'base/**/*';
 
+// :: ELEMENTS
+// -- All standard configuration of the project
+// -- ex ( fonts, reset, variables )
+@import 'elements/**/*';
+
 // :: COMPONENTS
 // -- Groups of elements with the intention of building standards in components
 // -- ex ( form, card, block news )
