--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -1,8 +1,11 @@
 /*!
-	Theme Name: GB Themes That
-	Theme URI: https://apiki.com
+	Theme Name: Blanktheme
+	Theme URI: https://github.com/Apiki/blanktheme
 	Author: Apiki
-	Description: Organize your assets
+	Author URI: https://apiki.com
+	Description: Theme Boilerplate.
+	Text Domain: blanktheme
+	Domain Path: languages/
 	Version: 1.0.0
 */
 
