[Structure] Updating front-end structure

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -10,8 +10,9 @@
   Text Domain: blanktheme
   Tags: blanktheme, boilerplate
 */
+
+
 body {
   background: #07a;
-  font-size: 16px; }
-
-/*# sourceMappingURL=style.css.map*/
+  font-size: 16px;
+}
